--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,3 +15,8 @@ jobs:
 
       - name: Build image
         run: docker build . -t local
+
+      - name: Test
+        working-directory: tests
+        run: |
+          docker run -v $PWD:/usr/work local build.sh
